# enxtad

./: .cpp  CMakeLists.txt
.cache/clangd/index/: app_window.cpp.B987B10103FFD7A9.idx  app_window.hpp.6CA90CCDF532DDE9.idx  first_app.cpp.0675442A7929C793.idx  first_app.hpp.897FBAF74DB41A02.idx  glfw3.h.442890BC6219CFEE.idx  main.cpp.2E0316CD674CA6A8.idx
dependencies/glad/: glad.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
math_lib/: linear_algs.cpp.txt  linear_algs.h.txt
src/: app.cpp  app.hpp  app_window.cpp  app_window.hpp  debug.cpp  debug.hpp  first_app.cpp  first_app.hpp  instance.cpp  instance.hpp  main.cpp
